--- a/aboutme.css
+++ b/aboutme.css
@@ -110,11 +110,14 @@ body {
     width: 100%;
     height: 100vh;
     box-shadow: 5px 0 5px -5px #cccccc;
-    background-image: url("assets/photo-2.jpeg");
+    background-image: url("assets/photo-nck.jpeg");
     background-size: cover;
     background-position: center;
-    filter: grayscale(90%);
-    transition: filter 0.5s; }
+    filter: grayscale(80%);
+    transition: filter 0.5s;
+    max-width:500px;
+    }
+    
     body .left:hover {
       filter: none; }
   body .right {
@@ -358,8 +361,8 @@ body {
   body {
     flex-direction: row; }
     body .left {
-      width: 42.86%;
+      width: 35%%;
       position: fixed; }
     body .right {
-      margin-left: 42.86%;
+      margin-left: 35%;
       padding: var(--lg-size) var(--xxxl-size); } }
